--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django
+django==4.1.2
 django-tinymce
 numpy==1.21.5
 pandas
@@ -14,7 +14,7 @@ htmldate
 newsapi
 htmldate
 praw
-scikit-learn
+scikit-learn~=1.1.3
 psycopg2--binary
 celery
 redis
